# core-schema

./: ARCHITECTURE.md  Cargo.toml  README.md  SOURCE_SURFACE_CANDIDATES.md  SOURCE_SURFACE_DECISION.md  flake.nix
examples/: source_surface_candidates.rs
src/: declaration.rs  document.rs  error.rs  fixture.rs  lib.rs  manifest.rs  reference.rs  source_surface_candidates.rs  source_surface_proposal.rs  textual.rs  universe.rs
tests/: archive_boundary.rs  authority_assignment.rs  content_hash_witness.rs  derived_conformance.rs  document_roundtrip.rs  identity.rs  interface_variants.rs  laws.rs  manifest_textual_form.rs  sliced_name_table.rs  source_surface_candidates.rs  streaming_relation.rs  textual_form.rs  textual_roundtrip.rs  universe_bridge.rs
