[package]
name         = "core-schema"
version      = "0.8.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-schema"
description  = "The stringless EncodedSchema layer and TextualSchema form: sliced identifiers, universe signatures, and bidirectional schema text."
publish      = false

[lib]
name = "core_schema"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
raw-discovery    = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[dev-dependencies]
# The derive's mirrored fixture family, pinned at the SAME protos rev as the
# machinery above so the two resolve one `structural-codec` and their entry types
# unify. This is the seat of the derived-vs-authored law-5 cross-check
# (`tests/derived_conformance.rs`): the derive lives upstream in protos, but the
# proof that its emitted entries equal these authored entries belongs here, where a
# single pin governs both.
structural-codec-derive-fixtures = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
